--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -23,3 +23,11 @@
   margin: 0 calc(-1 * var(--ifm-pre-padding));
   padding: 0 var(--ifm-pre-padding);
 }
+
+.title {
+  width: 200px;
+  height: 200px;
+  vertical-align: middle;
+  display: table-cell;
+  text-align: center;
+}
